[workspace]
members = [
    "rust_temp",
    "the_rust_cookbook/ch01_algorithms",
    "rust-examples/ch01_hello_world",
    "rust-examples/ch02_primitives",
    "rust-examples/ch03_custom_type",
    "rust-examples/ch09_function",
    "the-rust-programming-language/ch04",
    "the-rust-programming-language/ch10",
    "the-rust-programming-language/ch13",
    "the-rust-programming-language/ch15",
    "the-rust-programming-language/ch16",
    "dedao-rust-1/ch11_ownership_and_move",
    "dedao-rust-1/ch13_borrow_checked",
    "dedao-rust-1/ch15_interior_mutability",
    "dedao-rust-1/ch16_deref",
    "dedao-rust-1/ch17_out_of_memory",
    "dedao-rust-1/ch19_unsafe",
    "dedao-rust-1/ch20_vec_source_code",
    "dedao-rust-1/ch21_generic",
    "dedao-rust-1/ch22_closure",
    "dedao-rust-1/ch23_static_and_dynamic_dispatch",
    "dedao-rust-1/ch24_container_and_iterator",
    "dedao-rust-1/ch25_generator",
    "dedao-rust-1/ch26_standard_library",
    "dedao-rust-1/ch27_concurrence",
    "dedao-rust-1/ch29_shared_state",
]